<resources>
    <string name="app_name">HLB - Health Life Balance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">BMI Calculator</string>
    <string name="menu_slideshow">Disease Prediction</string>

    <string name="home_second">Home Second</string>

    <string name="height_1">Height (cm)</string>
    <string name="weight_1">Weight (Kg)</string>
    <string name="calculateBMI">Calculate BMI</string>
    <string name="very_severely_underweight">Very Severely Underweight</string>
    <string name="severely_underweight">Severely Underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">OverWeight</string>
    <string name="obese_class_i">Obese Class I (Moderately Obese)</string>
    <string name="obese_class_ii">Obese Class II (Severely Obese)</string>
    <string name="obese_class_iii">Obese Class III (Very Severely Obese)</string>
    <string name="dietplan">Diet Plan</string>

    <string name="textview">As per the predictions you may have...</string>
    <string name="result" />
    <string-array name="symptom_list">
        <item>Anxiety</item>
        <item>Abdominal Pain</item>
        <item>Blurred Vision</item>
        <item>Chest Pain</item>
        <item>Diarrhoea/Constipation</item>
        <item>Dizziness</item>
        <item>Dry Cough</item>
        <item>Fast Heartbeat</item>
        <item>Fever</item>
        <item>Frequent Urination</item>
        <item>Headaches</item>
        <item>Hunger</item>
        <item>Indigestion</item>
        <item>Muscle And Body Pain</item>
        <item>Muscle Pain</item>
        <item>Nausea</item>
        <item>Pressure Or Heaviness In Chest</item>
        <item>Shortness in Breath</item>
        <item>Stomach Ache</item>
        <item>Skin Itching</item>
        <item>Sudden Weight Loss</item>
        <item>Sweating</item>
        <item>Thirsty Than Usual</item>
        <item>Vomiting</item>
        <item>Weakness/Fatigue</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drug_not_taken_message">Have you taken your medicine today?</string>
    <string name="drug_taken_message">Medicine taken before %s</string>
    <string name="action_take_drug">Yes, I have</string>  <!-- [reused] -->
    <string name="action_reset">Reset</string>
    <string name="reminders_are_disabled">Reminders are disabled.</string>
    <string name="enable_reminders">Enable</string>

    <string name="missed_reminder_title">Missed reminders</string>
    <string name="missed_reminder_message">It appears that the scheduled reminders are failing to appear.\n\nThis might have been caused by your device\'s battery saving settings.</string>
    <string name="missed_reminder_button">Reset reminders</string>

    <!-- Reset confirmation dialog -->
    <string name="reset_confirmation_title">Forget last time?</string>
    <string name="reset_confirmation_message">Undoes the last time you pressed the <i>Yes, I have</i> button</string>
    <string name="reset_confirmation_ok">Forget</string>
    <string name="reset_confirmation_cancel">Cancel</string>

    <!-- ReminderActivity-->
    <string name="reminder_title">Have you taken your medicine?</string>
    <string name="reminder_snooze">Not yet</string>

    <!-- Notifications -->
    <string name="notification_channel_description_1">By default, this reminder is sent in the middle of the night, while you are sleeping. It opens the reminder dialog so it is the first thing that you will see when you pick up the device in the morning.</string>
    <string name="notification_title">It\'s time to take your medicine</string>
    <string name="notification_description">Tap here when you have taken it</string>

    <!-- Preferences -->
    <string name="settings_title">Settings</string>

    <!-- Preference Titles -->
    <string name="reminder">Reminders</string>
    <string name="reminder_enabled_summary">Daily</string>
    <string name="reminder_disabled_summary">Disabled</string>
    <string name="reminder_time">Reminder time</string>
    <string name="reminder_lock_screen">Bypass lock screen</string>
    <string name="reminder_lock_screen_summary">Allows responding to the reminder without unlocking the phone</string>
    <string name="reminder_test">Test reminder</string>

    <string name="reminder_time_edittext_hint">HH:MM</string>
    <string name="reminder_time_edittext_format">The time must be in 24-hour HH:MM format</string>

    <string name="title_activity_maps">Map</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>

    <string name="Age">Age</string>
    <string name="Age_entry">Age in years</string>
    <string name="height">Height</string>
    <string name="button_name">Next</string>
    <string name="Gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="weight1">Weight in Kgs</string>
    <string name="height_entry">Height in cms</string>
    <string name="health">Present Health Condition</string>

    <string-array name="Gender">
        <item>choose</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="R1">NO Sport/exercise</string>
    <string name="R2">Light activity(sport 1–3 times per week)</string>
    <string name="R3">Moderate activity(Sport 3–5 times per week)</string>
    <string name="R4">High active(Daily exercise)</string>
    <string name="R5">Extreme active(Professional athlete)</string>
    <string name="string1">your daily goals</string>
    <string name="go_to_home">Go to Home</string>
    <string name="plan">see diet plan</string>
    <string name="heading">Balance diet plan</string>
    <string name="info">> Concentration to complete your daily goal with healthy food.\n
    >Eat lots of fruit and vegetables.\n
    >Base your meals on higher fiber starchy carbohydrates.\n
    >To maintain good health, limit your consumption of empty calories(saturated fat and sugar) and instead try to get your calories from foods that are rich in other nutrients.</string>
    <string name="tomap">To view nearby Hospitals and pharmacy click the button below</string>
    <string name="map">Map</string>
</resources>