<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_calc"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_prediction"
            android:icon="@drawable/ic_predict"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/fitness"
            android:icon="@drawable/ic_action_run"
            android:title="Step Counter"/>
        <item
            android:id="@+id/remainder"
            android:icon="@drawable/ic_alarm"
            android:title="Medication Remainder"/>
        <item
            android:id="@+id/calorieIntake"
            android:icon="@drawable/ic_restaurant"
            android:title="Calorie Intake"/>
        <item
            android:id="@+id/nearby"
            android:icon="@drawable/ic_location"
            android:title="Near By Hospitals"/>

    </group>
</menu>
