<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.healthassist.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.healthassist.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_bmi"
        android:name="com.example.healthassist.ui.BMI.BMIFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_prediction"
        android:name="com.example.healthassist.ui.Prediction.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/fitness"
        android:name="com.example.healthassist.ui.Fitness.FitnessFragment"
        android:label="Fitness"
        tools:layout="@layout/fragment_fitness"/>
    <activity
        android:id="@+id/remainder"
        android:name="com.example.healthassist.ui.Remainder.RemainderActivity"
        android:label="Medication Remainder"
        tools:layout="@layout/activity_remainder"/>
    <activity
        android:id="@+id/calorieIntake"
        android:name="com.example.healthassist.ui.CalorieIntake.CalorieActivity"
        android:label="Calorie Intake"
        tools:layout="@layout/activity_calorie"/>
    <activity
        android:id="@+id/nearby"
        android:name="com.example.healthassist.ui.mymap.MapsActivity"
        android:label="Near By Hospitals"
        tools:layout="@layout/activity_maps"/>

</navigation>