<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CalorieIntake.Calorie2Activity">

    <TextView
        android:id="@+id/txtGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/string1"
        android:textSize="35dp"
        />
    <TextView
        android:id="@+id/txtCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calorie"
        android:textSize="23dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/txtP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Proteins"
        android:textSize="23dp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/txtf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fats"
        android:textSize="23dp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/txtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carbohydrates"
        android:textSize="23dp"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textSize="25dp"
        android:textColor="@android:color/holo_green_light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/buttonhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textSize="30dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="37dp"
        android:text="@string/go_to_home" />


</LinearLayout>